authentik/resources/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-auth
  namespace: authentik
spec:
  headers:
    accessControlAllowMethods: ['GET', 'OPTIONS', 'PUT', 'POST', 'PATCH']
    accessControlMaxAge: 100
    browserXssFilter: true
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self';"
    contentTypeNosniff: true
    customFrameOptionsValue: SAMEORIGIN
    customResponseHeaders:
      X-Robots-Tag: none,noarchive,nosnippet,notranslate,noimageindex
    permissionsPolicy: "camera 'none'; geolocation 'none'; microphone 'none'; payment 'none'; usb 'none'; vr 'none';"
    forceSTSHeader: true
    frameDeny: true
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-webui
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.cryogence.io`)
      services:
        - name: ak-outpost-authentik-embedded-outpost
          port: 9000
          scheme: http
      middlewares:
        - name: headers-auth
          namespace: authentik
  tls:
    secretName: cert-auth-io
